--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: black;
+    background-color: lightslategrey;
     color:aliceblue;
+    text-align: center;
+}
+p{
+    margin-top: 5px;
+    font-size: 1.5em;
 }
