--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Products:</h1>
-<p *ngFor = "let product of products">Our product offering: {{ product.product }}</p>
+<p *ngFor = "let product of products"> {{ product.product }}</p>
 
